content: add TP-Lab/kafka_plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "elasticsearch_plugin"]
 	path = elasticsearch_plugin
 	url = https://github.com/EOSLaoMao/elasticsearch_plugin.git
+[submodule "kafka_plugin"]
+	path = kafka_plugin
+	url = https://github.com/TP-Lab/kafka_plugin.git
