--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "eosio-watcher-plugin"]
 	path = eosio-watcher-plugin
 	url = https://github.com/eosauthority/eosio-watcher-plugin.git
+[submodule "eos_zmq_plugin"]
+	path = eos_zmq_plugin
+	url = https://github.com/cc32d9/eos_zmq_plugin.git
