--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "eos_zmq_plugin"]
 	path = eos_zmq_plugin
 	url = https://github.com/cc32d9/eos_zmq_plugin.git
+[submodule "eosio_light_api"]
+	path = eosio_light_api
+	url = https://github.com/cc32d9/eosio_light_api.git
