--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "eosio_light_api"]
 	path = eosio_light_api
 	url = https://github.com/cc32d9/eosio_light_api.git
+[submodule "chintai-zeromq-watcher-plugin"]
+	path = chintai-zeromq-watcher-plugin
+	url = https://github.com/acoutts/chintai-zeromq-watcher-plugin.git
